# 01_Prediction_of_the_key_rate_in_the_Russian_Federation_MLOps

./: README.md  docker-compose.yaml  pyproject.toml
backend/: Dockerfile  main.py  pyproject.toml
backend/src/: main.py
backend/src/data/: create_features.py  get_data.py  get_dataset.py  get_metrics.py  interpolate_missing_values_and_prepare.py  prepare_data_for_prophet.py  split_dataset.py
backend/src/pipelines/: pipeline.py
backend/src/train/: train.py
config/: params.yml
data/: df.csv  df_forecast.csv  df_forecast_future.csv  df_test.csv  df_train.csv
frontend/: Dockerfile  main.py
frontend/src/data/: get_data.py  interpolate_missing_values_and_prepare.py  split_dataset.py
frontend/src/plotting/: create_features.py  get_plot.py
frontend/src/train/: training.py
models/: final_test_model.json  prophet_best_model.joblib  prophet_best_model.json  prophet_best_model_future.joblib  prophet_best_params.joblib  prophet_best_params.json  prophet_best_params_future.joblib
notebooks/: Baseline_Tuning.ipynb  Parcer_EDA.ipynb  Parser_EDA.ipynb
report/: dict_metrics.json  metrics.json  prophet_best_params.json
