[tool.poetry]
name = "01-prediction-of-the-key-rate-in-the-russian-federation-mlops"
version = "0.1.0"
description = ""
authors = ["myxa95"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "*"
matplotlib = "*"
numpy = "*"
requests = "*"
beautifulsoup4 = "*"
scipy = "*"
holidays = "*"
prophet = "*"
scikit-learn = "*"
plotly = "*"
optuna = "*"
seaborn = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"